# ERPNext_Brazil_NF

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml
brazil_nf/: hooks.py  modules.txt
brazil_nf/api/: __init__.py
brazil_nf/brazil_nf/: __init__.py
brazil_nf/brazil_nf/doctype/nf_company_settings/: nf_company_settings.js  nf_company_settings.json  nf_company_settings.py
brazil_nf/brazil_nf/doctype/nf_import_log/: nf_import_log.json  nf_import_log.py
brazil_nf/brazil_nf/doctype/nota_fiscal/: nota_fiscal.js  nota_fiscal.json  nota_fiscal.py  nota_fiscal_dashboard.py  nota_fiscal_list.js
brazil_nf/brazil_nf/doctype/nota_fiscal_evento/: nota_fiscal_evento.json  nota_fiscal_evento.py
brazil_nf/brazil_nf/doctype/nota_fiscal_item/: nota_fiscal_item.json  nota_fiscal_item.py
brazil_nf/brazil_nf/doctype/nota_fiscal_settings/: nota_fiscal_settings.json  nota_fiscal_settings.py
brazil_nf/brazil_nf/workspace/brazil_nf/: brazil_nf.json
brazil_nf/services/: __init__.py  cert_utils.py  dfe_client.py  email_monitor.py  invoice_creator.py  invoice_parser.py  item_manager.py  po_matcher.py  processor.py  supplier_manager.py  xml_parser.py
brazil_nf/setup/: __init__.py  install.py
brazil_nf/utils/: __init__.py  chave_acesso.py  cnpj.py
docs/: QUICK_START.md
scripts/: docker_update.sh  install_brazil_nf.sh  update_brazil_nf.sh
